--- a/Audio_Dcase_DNN_Baseline/mainfile.ipynb
+++ b/Audio_Dcase_DNN_Baseline/mainfile.ipynb
@@ -12,12 +12,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Suppress warnings**: We need to supress warnings as we are going to use some sunctionality of an older version of *scikit-learn*."
+    "**Suppress warnings**: We need to supress warnings as we are going to use some functionality of an older version of *scikit-learn*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -37,12 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "ka_path=\"your/path/here\"\n",
+    "ka_path=\"e:/akshita_workspace/cc\"\n",
     "sys.path.insert(0, ka_path)\n",
     "from keras_aud import aud_audio, aud_feature\n",
     "from keras_aud import aud_model"
@@ -64,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -98,19 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "wav_dev_fd   = 'audio/dev'\n",
-    "wav_eva_fd   = 'audio/eva'\n",
-    "dev_fd       = 'features/Fe/logmel'\n",
-    "eva_fd       = 'features/Fe_eva/logmel'\n",
-    "label_csv    = 'texts/development/meta.txt'\n",
-    "txt_eva_path = 'texts/evaluation/test.txt'\n",
-    "new_p        = 'texts/evaluation/evaluate.txt'"
+    "wav_dev_fd   = 'E:/akshita_workspace/dcase_data/audio/dev'\n",
+    "wav_eva_fd   = 'E:/akshita_workspace/dcase_data/audio/eva'\n",
+    "dev_fd       = 'E:/akshita_workspace/cc/features/Fe/logmel'\n",
+    "eva_fd       = 'E:/akshita_workspace/cc/features/Fe_eva/logmel'\n",
+    "label_csv    = 'E:/akshita_workspace/dcase_data/texts/development/meta.txt'\n",
+    "txt_eva_path = 'E:/akshita_workspace/dcase_data/texts/evaluation/test.txt'\n",
+    "new_p        = 'E:/akshita_workspace/dcase_data/texts/evaluation/evaluate.txt'"
    ]
   },
   {
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -182,20 +186,20 @@
     "| `model`            | Name of model            | `str`      | DNN, CNN, CRNN, RNN, FCRNN  |\n",
     "| `modelx`           | Name of model for saving | `str`      | Should end with `.h5`       |\n",
     "| `feature`          | Name of feature          | `str`      | mel, logmel, cqt, mfcc, zcr |\n",
-    "|**Works only for Functional**| | |\n",
+    "| **Works only for Functional** | | | |\n",
     "| `dropout1`         | 1st Dropout              | `float`    |                             |\n",
     "| `act1`             | 1st Activation           | `str`      |                             |\n",
     "| `act2`             | 2nd Activation           | `str`      |                             |\n",
     "| `act3`             | 3rd Activation           | `str`      |                             |\n",
     "| `act4`             | 4th Activation           | `str`      | Only in case of DNN         |\n",
-    "|**Works for all Models**|||\n",
+    "| **Works for all Models** | | | |\n",
     "| `input_neurons`    | Number of Neurons        | `int`      |                             |\n",
     "| `epochs`           | Number of Epochs         | `int`      |                             |\n",
     "| `batchsize`        | Batch Size               | `int`      |                             |\n",
     "| `num_classes`      | Number of classes        | `int`      |                             |\n",
     "| `filter_length`    | Size of Filter           | `int`      |                             |\n",
     "| `nb_filter`        | Number of Filters        | `int`      |                             |\n",
-    "|**Feature Parameters**|||\n",
+    "| **Feature Parameters** | | | |\n",
     "| `agg_num`          | Number of frames         | `int`      |                             |\n",
     "| `hop`              | Hop Length               | `int`      |                             |\n",
     "| `custom_check_ftr` | check for dimensions     | `bool`     | True: know dimension        |\n"
@@ -203,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +226,7 @@
     "act3='softmax'           # 3rd Activation(String) \n",
     "#Works for all Models\n",
     "input_neurons=400      # Number of Neurons(Integer) \n",
-    "epochs=10              # Number of Epochs(Integer)\n",
+    "epochs=100             # Number of Epochs(Integer)\n",
     "batchsize=128          # Batch Size(Integer)\n",
     "num_classes=15         # Number of classes(Integer)\n",
     "filter_length=3        # Size of Filter(Integer)\n",
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -471,33 +475,213 @@
       "Evaluation mode\n",
       "Activation 1 relu 2 relu 3 softmax\n",
       "Model CNN\n",
-      "Epoch 1/10\n",
-      " - 34s - loss: 1.8508 - acc: 0.3723\n",
-      "Epoch 2/10\n",
-      " - 34s - loss: 1.0339 - acc: 0.6477\n",
-      "Epoch 3/10\n",
-      " - 34s - loss: 0.8195 - acc: 0.7199\n",
-      "Epoch 4/10\n",
-      " - 34s - loss: 0.6883 - acc: 0.7657\n",
-      "Epoch 5/10\n",
-      " - 34s - loss: 0.5954 - acc: 0.7962\n",
-      "Epoch 6/10\n",
-      " - 34s - loss: 0.5327 - acc: 0.8193\n",
-      "Epoch 7/10\n",
-      " - 34s - loss: 0.4827 - acc: 0.8361\n",
-      "Epoch 8/10\n",
-      " - 30s - loss: 0.4478 - acc: 0.8477\n",
-      "Epoch 9/10\n",
-      " - 31s - loss: 0.4163 - acc: 0.8581\n",
-      "Epoch 10/10\n",
-      " - 34s - loss: 0.3951 - acc: 0.8657\n",
+      "Epoch 1/100\n",
+      " - 48s - loss: 1.9536 - acc: 0.3455\n",
+      "Epoch 2/100\n",
+      " - 48s - loss: 1.0406 - acc: 0.6401\n",
+      "Epoch 3/100\n",
+      " - 48s - loss: 0.7970 - acc: 0.7296\n",
+      "Epoch 4/100\n",
+      " - 48s - loss: 0.6670 - acc: 0.7725\n",
+      "Epoch 5/100\n",
+      " - 48s - loss: 0.5821 - acc: 0.8018\n",
+      "Epoch 6/100\n",
+      " - 48s - loss: 0.5257 - acc: 0.8200\n",
+      "Epoch 7/100\n",
+      " - 48s - loss: 0.4800 - acc: 0.8371\n",
+      "Epoch 8/100\n",
+      " - 47s - loss: 0.4450 - acc: 0.8483\n",
+      "Epoch 9/100\n",
+      " - 48s - loss: 0.4148 - acc: 0.8585\n",
+      "Epoch 10/100\n",
+      " - 47s - loss: 0.3923 - acc: 0.8661\n",
+      "Epoch 11/100\n",
+      " - 48s - loss: 0.3728 - acc: 0.8728\n",
+      "Epoch 12/100\n",
+      " - 47s - loss: 0.3539 - acc: 0.8791\n",
+      "Epoch 13/100\n",
+      " - 48s - loss: 0.3371 - acc: 0.8852\n",
+      "Epoch 14/100\n",
+      " - 48s - loss: 0.3258 - acc: 0.8883\n",
+      "Epoch 15/100\n",
+      " - 48s - loss: 0.3156 - acc: 0.8915\n",
+      "Epoch 16/100\n",
+      " - 47s - loss: 0.3041 - acc: 0.8966\n",
+      "Epoch 17/100\n",
+      " - 47s - loss: 0.2928 - acc: 0.8998\n",
+      "Epoch 18/100\n",
+      " - 48s - loss: 0.2798 - acc: 0.9036\n",
+      "Epoch 19/100\n",
+      " - 48s - loss: 0.2717 - acc: 0.9062\n",
+      "Epoch 20/100\n",
+      " - 48s - loss: 0.2651 - acc: 0.9089\n",
+      "Epoch 21/100\n",
+      " - 44s - loss: 0.2555 - acc: 0.9124\n",
+      "Epoch 22/100\n",
+      " - 29s - loss: 0.2502 - acc: 0.9133\n",
+      "Epoch 23/100\n",
+      " - 30s - loss: 0.2416 - acc: 0.9165\n",
+      "Epoch 24/100\n",
+      " - 34s - loss: 0.2345 - acc: 0.9185\n",
+      "Epoch 25/100\n",
+      " - 48s - loss: 0.2303 - acc: 0.9204\n",
+      "Epoch 26/100\n",
+      " - 47s - loss: 0.2220 - acc: 0.9235\n",
+      "Epoch 27/100\n",
+      " - 48s - loss: 0.2182 - acc: 0.9244\n",
+      "Epoch 28/100\n",
+      " - 48s - loss: 0.2144 - acc: 0.9264\n",
+      "Epoch 29/100\n",
+      " - 48s - loss: 0.2111 - acc: 0.9259\n",
+      "Epoch 30/100\n",
+      " - 48s - loss: 0.2069 - acc: 0.9286\n",
+      "Epoch 31/100\n",
+      " - 47s - loss: 0.2022 - acc: 0.9296\n",
+      "Epoch 32/100\n",
+      " - 47s - loss: 0.1965 - acc: 0.9315\n",
+      "Epoch 33/100\n",
+      " - 48s - loss: 0.1924 - acc: 0.9330\n",
+      "Epoch 34/100\n",
+      " - 48s - loss: 0.1892 - acc: 0.9337\n",
+      "Epoch 35/100\n",
+      " - 48s - loss: 0.1851 - acc: 0.9351\n",
+      "Epoch 36/100\n",
+      " - 48s - loss: 0.1844 - acc: 0.9355\n",
+      "Epoch 37/100\n",
+      " - 48s - loss: 0.1805 - acc: 0.9372\n",
+      "Epoch 38/100\n",
+      " - 47s - loss: 0.1752 - acc: 0.9386\n",
+      "Epoch 39/100\n",
+      " - 48s - loss: 0.1710 - acc: 0.9405\n",
+      "Epoch 40/100\n",
+      " - 48s - loss: 0.1683 - acc: 0.9417\n",
+      "Epoch 41/100\n",
+      " - 48s - loss: 0.1681 - acc: 0.9413\n",
+      "Epoch 42/100\n",
+      " - 47s - loss: 0.1618 - acc: 0.9434\n",
+      "Epoch 43/100\n",
+      " - 48s - loss: 0.1609 - acc: 0.9442\n",
+      "Epoch 44/100\n",
+      " - 38s - loss: 0.1575 - acc: 0.9450\n",
+      "Epoch 45/100\n",
+      " - 30s - loss: 0.1552 - acc: 0.9453\n",
+      "Epoch 46/100\n",
+      " - 30s - loss: 0.1523 - acc: 0.9472\n",
+      "Epoch 47/100\n",
+      " - 30s - loss: 0.1490 - acc: 0.9479\n",
+      "Epoch 48/100\n",
+      " - 30s - loss: 0.1467 - acc: 0.9479\n",
+      "Epoch 49/100\n",
+      " - 30s - loss: 0.1455 - acc: 0.9485\n",
+      "Epoch 50/100\n",
+      " - 30s - loss: 0.1446 - acc: 0.9492\n",
+      "Epoch 51/100\n",
+      " - 30s - loss: 0.1423 - acc: 0.9497\n",
+      "Epoch 52/100\n",
+      " - 30s - loss: 0.1373 - acc: 0.9513\n",
+      "Epoch 53/100\n",
+      " - 30s - loss: 0.1373 - acc: 0.9515\n",
+      "Epoch 54/100\n",
+      " - 30s - loss: 0.1357 - acc: 0.9522\n",
+      "Epoch 55/100\n",
+      " - 30s - loss: 0.1323 - acc: 0.9536\n",
+      "Epoch 56/100\n",
+      " - 30s - loss: 0.1301 - acc: 0.9546\n",
+      "Epoch 57/100\n",
+      " - 30s - loss: 0.1291 - acc: 0.9545\n",
+      "Epoch 58/100\n",
+      " - 30s - loss: 0.1284 - acc: 0.9547\n",
+      "Epoch 59/100\n",
+      " - 30s - loss: 0.1275 - acc: 0.9554\n",
+      "Epoch 60/100\n",
+      " - 30s - loss: 0.1235 - acc: 0.9561\n",
+      "Epoch 61/100\n",
+      " - 30s - loss: 0.1206 - acc: 0.9575\n",
+      "Epoch 62/100\n",
+      " - 30s - loss: 0.1201 - acc: 0.9574\n",
+      "Epoch 63/100\n",
+      " - 30s - loss: 0.1183 - acc: 0.9582\n",
+      "Epoch 64/100\n",
+      " - 29s - loss: 0.1172 - acc: 0.9584\n",
+      "Epoch 65/100\n",
+      " - 30s - loss: 0.1164 - acc: 0.9589\n",
+      "Epoch 66/100\n",
+      " - 29s - loss: 0.1166 - acc: 0.9588\n",
+      "Epoch 67/100\n",
+      " - 30s - loss: 0.1143 - acc: 0.9599\n",
+      "Epoch 68/100\n",
+      " - 29s - loss: 0.1124 - acc: 0.9602\n",
+      "Epoch 69/100\n",
+      " - 30s - loss: 0.1098 - acc: 0.9614\n",
+      "Epoch 70/100\n",
+      " - 30s - loss: 0.1095 - acc: 0.9617\n",
+      "Epoch 71/100\n",
+      " - 30s - loss: 0.1092 - acc: 0.9617\n",
+      "Epoch 72/100\n",
+      " - 29s - loss: 0.1059 - acc: 0.9631\n",
+      "Epoch 73/100\n",
+      " - 29s - loss: 0.1055 - acc: 0.9629\n",
+      "Epoch 74/100\n",
+      " - 30s - loss: 0.1058 - acc: 0.9628\n",
+      "Epoch 75/100\n",
+      " - 29s - loss: 0.1022 - acc: 0.9638\n",
+      "Epoch 76/100\n",
+      " - 29s - loss: 0.1014 - acc: 0.9647\n",
+      "Epoch 77/100\n",
+      " - 29s - loss: 0.0998 - acc: 0.9644\n",
+      "Epoch 78/100\n",
+      " - 29s - loss: 0.0988 - acc: 0.9649\n",
+      "Epoch 79/100\n",
+      " - 30s - loss: 0.0982 - acc: 0.9654\n",
+      "Epoch 80/100\n",
+      " - 30s - loss: 0.0967 - acc: 0.9660\n",
+      "Epoch 81/100\n",
+      " - 30s - loss: 0.0940 - acc: 0.9669\n",
+      "Epoch 82/100\n",
+      " - 29s - loss: 0.0944 - acc: 0.9666\n",
+      "Epoch 83/100\n",
+      " - 29s - loss: 0.0948 - acc: 0.9669\n",
+      "Epoch 84/100\n",
+      " - 30s - loss: 0.0933 - acc: 0.9670\n",
+      "Epoch 85/100\n",
+      " - 30s - loss: 0.0914 - acc: 0.9678\n",
+      "Epoch 86/100\n",
+      " - 29s - loss: 0.0912 - acc: 0.9673\n",
+      "Epoch 87/100\n",
+      " - 29s - loss: 0.0913 - acc: 0.9676\n",
+      "Epoch 88/100\n",
+      " - 29s - loss: 0.0868 - acc: 0.9692\n",
+      "Epoch 89/100\n",
+      " - 30s - loss: 0.0868 - acc: 0.9693\n",
+      "Epoch 90/100\n",
+      " - 29s - loss: 0.0861 - acc: 0.9697\n",
+      "Epoch 91/100\n",
+      " - 30s - loss: 0.0866 - acc: 0.9697\n",
+      "Epoch 92/100\n",
+      " - 29s - loss: 0.0855 - acc: 0.9700\n",
+      "Epoch 93/100\n",
+      " - 29s - loss: 0.0851 - acc: 0.9703\n",
+      "Epoch 94/100\n",
+      " - 30s - loss: 0.0855 - acc: 0.9699\n",
+      "Epoch 95/100\n",
+      " - 29s - loss: 0.0819 - acc: 0.9710\n",
+      "Epoch 96/100\n",
+      " - 29s - loss: 0.0832 - acc: 0.9709\n",
+      "Epoch 97/100\n",
+      " - 30s - loss: 0.0820 - acc: 0.9712\n",
+      "Epoch 98/100\n",
+      " - 29s - loss: 0.0807 - acc: 0.9719\n",
+      "Epoch 99/100\n",
+      " - 30s - loss: 0.0791 - acc: 0.9722\n",
+      "Epoch 100/100\n",
+      " - 29s - loss: 0.0808 - acc: 0.9717\n",
       "write out finished!\n",
-      "Accuracy 61.03 prcnt\n"
+      "Accuracy 80.51 prcnt\n"
      ]
     }
    ],
    "source": [
-    "np.random.seed(1155)\n",
+    "np.random.seed(1523)\n",
     "if cross_validation:\n",
     "    kf = KFold(len(tr_X),folds,shuffle=True,random_state=42)\n",
     "    results=[]    \n",
