Updating cqt cnn

--- a/Audio_Dcase_CNN_CQT/mainfile.ipynb
+++ b/Audio_Dcase_CNN_CQT/mainfile.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,14 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "ka_path=\"e:/akshita_workspace/cc\"\n",
+    "ka_path=\"C:/Users/aditya/version-control\"\n",
     "sys.path.insert(0, ka_path)\n",
     "from keras_aud import aud_audio, aud_feature\n",
     "from keras_aud import aud_model"
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,19 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "wav_dev_fd   = 'E:/akshita_workspace/dcase_data/audio/dev'\n",
-    "wav_eva_fd   = 'E:/akshita_workspace/dcase_data/audio/eva'\n",
-    "dev_fd       = 'E:/akshita_workspace/cc/features/Fe/logmel'\n",
-    "eva_fd       = 'E:/akshita_workspace/cc/features/Fe_eva/logmel'\n",
-    "label_csv    = 'E:/akshita_workspace/dcase_data/texts/development/meta.txt'\n",
-    "txt_eva_path = 'E:/akshita_workspace/dcase_data/texts/evaluation/test.txt'\n",
-    "new_p        = 'E:/akshita_workspace/dcase_data/texts/evaluation/evaluate.txt'"
+    "wav_dev_fd   = ka_path+'/dcase_data/audio/dev'\n",
+    "#wav_eva_fd   = ka_path+'/dcase_data/audio/eva'\n",
+    "dev_fd       = ka_path+'/dcase_data/features/dev/logmel'\n",
+    "#eva_fd       = ka_path+'/dcase_data/features/eva/cqt'\n",
+    "label_csv    = ka_path+'/dcase_data/texts/dev/meta.txt'\n",
+    "#txt_eva_path = ka_path+'/dcase_data/texts/eva/test.txt'\n",
+    "#new_p        = ka_path+'/dcase_data/texts/eva/evaluate.txt'"
    ]
   },
   {
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +158,13 @@
      "output_type": "stream",
      "text": [
       "extraction complete!\n",
-      "Feature found\n",
-      "extraction complete!\n",
       "Feature found\n"
      ]
     }
    ],
    "source": [
-    "aud_audio.extract('logmel', wav_dev_fd, dev_fd,'example.yaml')\n",
-    "aud_audio.extract('logmel', wav_eva_fd, eva_fd,'example.yaml')\n"
+    "#aud_audio.extract('cqt', wav_dev_fd, dev_fd,'example.yaml')\n",
+    "#aud_audio.extract('logmel', wav_eva_fd, eva_fd,'example.yaml')\n"
    ]
   },
   {
@@ -181,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -223,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -321,15 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features loaded 1170\n",
-      "All files loaded successfully\n"
+      "Features loaded"
      ]
     }
    ],
